# BankWise

./: .env  .env.example  API_EXAMPLES.md  DEPLOYMENT.md  MESSAGES.md  README.md  SYSTEM_PROMPT.md  TODO.md  database.py  dependencies.py  generate_agents.py  main.py  mock_data.py  mock_data_storage.py  models.py  pyproject.toml  regenerate_mock_data.py  render.yaml  request_payload_templates.md  requirements.txt  test_api.py  test_sms_functionality.py
Prompts/: CURRENT_PROMPT.md  README.md  SYSTEM_PROMPT.md  SYSTEM_PROMPT_V2.md  SYSTEM_PROMPT_V3.md  SYSTEM_PROMPT_V4.md
chain/: BankWise.json
docs/: API_EXAMPLES.md  AetherOps_Inya_Final_Submission.md  DEPLOYMENT.md  ai_agent_logic_flow.md  api_backend_architecture.md
knowledge_base/: error_handling_guide.md  faq.md  fd_rates.csv  main.md  request_payload_templates.md
knowledge_base/Text/: banking_details.txt  faq.txt  glossary.txt  main.txt  request_payload_templates.txt
mock_data/: accounts.json  agents.json  atms.json  branches.json  build_kb.py  cards.json  cheques.json  complaints.json  disputes.json  fd_rates.json  loans.json
routes/: accessibility.py  account.py  atm.py  branch.py  card.py  chat.py  cheque.py  complaint.py  dashboard.py  dispute.py  escalation.py  fd.py  kyc.py  loan.py  sms.py
services/: __init__.py  agent_service.py  sms_service.py
templates/: dashboard.html
